Review Request 17214 turn off remote debug on local tomcat by default